Fix number overflow

--- a/packages/guider/src/styles/components/codeblocks.css
+++ b/packages/guider/src/styles/components/codeblocks.css
@@ -3,7 +3,7 @@
   /*
    * basic styling of the block
    */
-  @apply gd-bg-bgLight gd-text-textLight gd-relative gd-rounded-lg gd-mb-4 gd-text-sm;
+  @apply gd-bg-bgLight gd-text-textLight gd-relative gd-rounded-lg gd-overflow-hidden gd-mb-4 gd-text-sm;
 
   figcaption {
     @apply gd-text-textLight gd-px-4 gd-py-2 gd-border-b gd-border-text gd-border-opacity-25;
